--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "scripts": {
+    "dev": "live-server client --port=3000 --open=/index.html",
+    "server": "node server/server.js",
+    "start": "concurrently \"npm run dev\" \"npm run server\""
+  },
   "dependencies": {
     "@capacitor/cli": "^7.4.1"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   }
 }
