--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "scripts": {
-    "dev": "live-server client --port=3000 --open=/index.html",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "server": "node server/server.js",
     "start": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
-    "@capacitor/cli": "^7.4.1"
+    "@capacitor/cli": "^7.4.1",
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "concurrently": "^9.2.0",
+    "live-server": "^1.2.2",
+    "vite": "^7.0.4"
   }
 }
