--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  publish = "client/dist"
-  command = ""
+  base = "client"
+  publish = "dist"
+  command = "npm run build"
 
 [[redirects]]
   from = "/*"
